--- a/ios/SjekkUT/nb.lproj/Localizable.strings
+++ b/ios/SjekkUT/nb.lproj/Localizable.strings
@@ -1,3 +1,6 @@
+/* distance visit button title */
+"%@ left" = "%@ igjen";
+
 /* daily checkin description */
 "%@ people have checked in here today." = "%@ personer har besøkt i dag.";
 
@@ -7,8 +10,8 @@
 /* title for location request */
 "Allow using location" = "Tillat å bruke stedstjenester";
 
-/* check in button title */
-"Check in to (firstPlace.name!)" = "Besøk (firstPlace.name!)";
+/* title of panel if visit fails */
+"Can't register visit" = "Kan ikke registrere besøk";
 
 /* Checking in label in summit search */
 "Checking in..." = "Besøker...";
@@ -40,8 +43,14 @@
 /* section header with checkins */
 "My projects" = "Mine turprosjekter";
 
+/* distance visit button message */
+"Nearest post is %@." = "Nærmeste turpost er %@.";
+
 /* cancel button title for location request */
 "No" = "Nei";
+
+/* No GPS signal title */
+"No GPS" = "Ikke GPS";
 
 /* daily checkin description */
 "Nobody have checked in here today." = "Ingen besøk i dag.";
@@ -55,6 +64,9 @@
 /* cancel button title for restricted location */
 "OK" = "Ok";
 
+/* message of panel after visiting */
+"Ok, we have you visiting %@. Good job!" = "Ok, vi har registrert besøk på %@. Bra jobbet!";
+
 /* daily checkin description */
 "Only one person have checked in here today." = "Kun ett besøk i dag.";
 
@@ -64,8 +76,14 @@
 /* title for generic location failure */
 "Positioning Failure" = "Feil i stedstjenester";
 
+/* title of panel when visiting */
+"Registering visit" = "Registrerer besøk";
+
 /* project header when searching */
 "Search results" = "Søkeresultater";
+
+/* message of panel failing to visit */
+"Something wrong happened: %@." = "En feil oppstod: %@.";
 
 /* summit count label singular */
 "Summited %ld time" = "Besøkt en gang";
@@ -93,8 +111,23 @@
 /* locate permission error message */
 "Unable to locate you. This can occur if you didn't allow using location services, or if your device has parental controls." = "Klarer ikke finne deg. Dette kan skje hvis du ikke tillot å bruke stedstjenester, eller hvis foreldrekontroll er i bruk.";
 
+/* visit title */
+"Visit %@" = "Besøk %@";
+
+/* title of visit panel when not possible to visit */
+"Visit registered" = "Besøk registret";
+
+/* title of panel after visiting */
+"Visited %@" = "Besøkte %@";
+
 /* count visits in project cell */
 "Visited %@ of %@" = "Besøkt %1$@ av %2$@";
+
+/* message of panel when visiting */
+"Visiting %@, please wait.." = "Registrerer besøk på %@";
+
+/* No GPS signal message */
+"We need GPS to register visit. Please turn this on in Settings" = "Vi trenger GPS for å registrere besøk. Vennligst slå dette på";
 
 /* join/leave in progress */
 "Working.." = "Jobber..";
@@ -107,6 +140,9 @@
 
 /* can check in */
 "You can check in." = "Du kan besøke.";
+
+/* visit message */
+"You can now visit %@!" = "Du kan nå besøke %@!";
 
 /* last checkin time ago */
 "You checked in to %@ %@." = "Du besøkte %@ %@.";
@@ -131,4 +167,7 @@
 
 /* can't check in time */
 "You have to wait 24 hours before you can check in." = "Du må vente 24 timer før du kan besøke";
+
+/* message of visit panel when not possible to visit */
+"You visited %@ %@ ago" = "Du besøkte %1$@ %2$@ siden";
 
