--- a/ios/SjekkUT/nb.lproj/Main.strings
+++ b/ios/SjekkUT/nb.lproj/Main.strings
@@ -1,6 +1,9 @@
 /* (No Commment) */
 "3Xd-S5-Acu.text" = "fylke, høyde";
 
+/* Class = "UINavigationItem"; title = "Place"; ObjectID = "75k-d1-Gl6"; */
+"75k-d1-Gl6.title" = "Turpost";
+
 /* (No Commment) */
 "BES-ZN-c87.normalTitle" = "Besøk!";
 
